[package]
name = "img"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
anyhow = "1.0.41"
duct = "0.13.5"
rayon = "1.5.1"
which = "4.1.0"
