[package]
name = "img"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.2"
anyhow = "1.0.98"
duct = "1.0.0"
rayon = "1.10.0"
which = "7.0.3"
